# Unreal_TD_1

./: README.md  TD_1_Nicolas_Corbi.uproject
.github/workflows/: cmake-single-platform.yml  static.yml
CMAKE/: CMakeLists.txt
CMAKE/lib/: CMakeLists.txt
CMAKE/lib/src/: lib.cpp
CMAKE/src/: main.cpp
CMAKE/tests/: main.cpp
Config/: DefaultEngine.ini  DefaultGame.ini
Content/Blueprints/: BP_Cube.uasset  BP_MovingPlatform.uasset  BP_SpikeTrap.uasset  GI_MyGameInstance.uasset  GM_Base.uasset  HealthCollectible.uasset  MAT_Landscape.uasset  SG_MySaveGame.uasset
Content/Blueprints/Character/: AB_MyCharacterAnimation.uasset  BP_MyCharacter.uasset  PC_MyPlayerController.uasset
Content/Blueprints/Checkpoints/: BP_Checkpoint.uasset  BP_Goal.uasset
Content/Blueprints/Collectibles/: BP_HealthCollectible.uasset  HealthCollectible.uasset
Content/Blueprints/Test/: BPW_CustomWidget.uasset  BPW_HUD.uasset  BP_Cube.uasset  BP_MovingPlatformV2.uasset  BP_MyDynaCube.uasset  BP_TestMovingPlatformWithTimeline.uasset
Content/Blueprints/Traps/: BP_Lava.uasset  BP_MovingPlatform.uasset  BP_SpikeBall.uasset  BP_SpikeTrap.uasset  (+2 more)
Content/Datas/: CF_Platform.uasset
Content/Inputs/: IA_Dash.uasset  IA_Jump.uasset  IA_Look.uasset  IA_Move.uasset  IMC_Base.uasset
Content/Levels/: MarioLevel.umap
Content/Materials/: MAT_CubeBase.uasset  MAT_Landscape.uasset  MAT_Test.uasset  MI_Test.uasset
Source/: TD_1_Nicolas_Corbi.Target.cs  TD_1_Nicolas_CorbiEditor.Target.cs
Source/TD_1_Nicolas_Corbi/: TD_1_Nicolas_Corbi.Build.cs  TD_1_Nicolas_Corbi.cpp
Test/: index.html
(+52 files in other folders)
